--- a/package.json
+++ b/package.json
@@ -9,13 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-seoul/masonry-list": "^1.4.2",
+    "@react-navigation/bottom-tabs": "^6.5.18",
+    "@react-navigation/native": "^6.1.15",
+    "@react-navigation/native-stack": "^6.9.24",
+    "axios": "^1.6.7",
     "expo": "~50.0.11",
     "expo-status-bar": "~1.11.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-heroicons": "^4.0.0",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
